--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -4,6 +4,8 @@
 
 // Your custom theme
 @import "_variables.less";
+@import "colors.less";
+@import "callout.less";
 
 // Reset
 @import "bower_components/bootstrap/less/normalize.less";
