--- a/app/modules/navbar/partials/breadcrumb.jade
+++ b/app/modules/navbar/partials/breadcrumb.jade
@@ -4,7 +4,7 @@
 
     li(ng-repeat="step in steps | limitTo:(steps.length-1)")
       a(href="{{step.ncyBreadcrumbLink}}")
-        span(ng-bind-html="step.ncyBreadcrumbLabel")
+        span(ng-i18next="{{'breadcrumb.' + step.ncyBreadcrumbLabel}}")
 
     li.active(ng-repeat="step in steps | limitTo:-1")
-      span(ng-bind-html="step.ncyBreadcrumbLabel")
+      span(ng-i18next="{{'breadcrumb.' + step.ncyBreadcrumbLabel}}")
